[gd_scene load_steps=12 format=3 uid="uid://cg0e5q3gij84a"]

[ext_resource type="Script" path="res://Scripts/SessionData.gd" id="1_d50y5"]
[ext_resource type="Script" path="res://NightCycleTimer.gd" id="2_44kwh"]
[ext_resource type="Script" path="res://Scripts/PlayerInventory.gd" id="3_m25fl"]
[ext_resource type="Theme" uid="uid://c512vx707upjo" path="res://GameStateUIBIG.tres" id="4_3frjn"]
[ext_resource type="PackedScene" uid="uid://bp0qjo7qv5etn" path="res://Scenes/GameOverMenu.tscn" id="4_vrwtq"]
[ext_resource type="Script" path="res://Scripts/GameStateUI.gd" id="5_0nfe5"]
[ext_resource type="PackedScene" uid="uid://cj30fyupkdv5" path="res://Scenes/GameOverScreen.tscn" id="5_f334p"]
[ext_resource type="Texture2D" uid="uid://u8ui6wh8j630" path="res://icon.svg" id="6_1lvje"]
[ext_resource type="Script" path="res://Scripts/MoneyUI.gd" id="7_lptr6"]
[ext_resource type="Script" path="res://Scenes/PotentialMoneyUI.gd" id="8_bin1h"]

[sub_resource type="Theme" id="Theme_dwjvk"]

[node name="SessionData" type="Node"]
script = ExtResource("1_d50y5")

[node name="NightCycleTimer" type="Timer" parent="."]
script = ExtResource("2_44kwh")

[node name="PlayerInventory" type="Node" parent="."]
script = ExtResource("3_m25fl")

[node name="TopRightBox" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 28.825
anchor_right = 28.825
offset_left = -32360.4
offset_right = -32053.4
offset_bottom = 209.0
theme = SubResource("Theme_dwjvk")

[node name="HBoxContainer" type="HBoxContainer" parent="TopRightBox"]
layout_mode = 2

[node name="Control" type="Control" parent="TopRightBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GameStateUI" type="RichTextLabel" parent="TopRightBox/HBoxContainer/Control"]
layout_mode = 2
anchor_left = 0.394
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.95
offset_top = 22.0
offset_bottom = -19.0
size_flags_horizontal = 3
theme = ExtResource("4_3frjn")
theme_override_constants/outline_size = 2
text = "NIGHT 1

8:00 PM"
script = ExtResource("5_0nfe5")

[node name="TextureRect" type="TextureRect" parent="TopRightBox/HBoxContainer"]
layout_mode = 2
texture = ExtResource("6_1lvje")

[node name="ControlMoney" type="Control" parent="TopRightBox"]
layout_mode = 2

[node name="MoneyUI" type="RichTextLabel" parent="TopRightBox/ControlMoney"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -333.0
offset_top = 1.0
offset_right = -87.0
offset_bottom = 66.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("4_3frjn")
text = "$ "
script = ExtResource("7_lptr6")

[node name="ControlMoney2" type="Control" parent="TopRightBox"]
layout_mode = 2

[node name="PotentialMoneyUI" type="RichTextLabel" parent="TopRightBox/ControlMoney2"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -334.0
offset_top = 40.0
offset_right = -95.0
offset_bottom = 71.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("4_3frjn")
text = "$ "
script = ExtResource("8_bin1h")

[node name="GameOverMenu" parent="." instance=ExtResource("4_vrwtq")]
visible = false
anchors_preset = 15
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverScreen" parent="." instance=ExtResource("5_f334p")]
visible = false

[connection signal="nightEnded" from="." to="TopRightBox/HBoxContainer/Control/GameStateUI" method="_on_session_data_night_ended"]
[connection signal="tick" from="NightCycleTimer" to="TopRightBox/HBoxContainer/Control/GameStateUI" method="_on_night_cycle_timer_tick"]
[connection signal="timeout" from="NightCycleTimer" to="." method="_on_night_cycle_timer_timeout"]
[connection signal="moneyChanged" from="PlayerInventory" to="TopRightBox/ControlMoney/MoneyUI" method="_on_player_inventory_money_changed"]
[connection signal="timeout" from="GameOverScreen/ScreenTimer" to="." method="_on_screen_timer_timeout"]

[editable path="GameOverMenu"]
[editable path="GameOverScreen"]
